--- a/pcf-mysql-bind-service/pom.xml
+++ b/pcf-mysql-bind-service/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.tech</groupId>
-	<artifactId>pcf-mysql-bind-service</artifactId>
+	<artifactId>pcf-mysql-bind-service1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
