--- a/pcf-user-service/manifest.yml
+++ b/pcf-user-service/manifest.yml
@@ -5,3 +5,5 @@ applications:
   instances: 1
   path: target/pcf-user-service-0.0.1-SNAPSHOT.jar
   host: pcf-user-service 
+  services:
+  - userprovideOronprimeSQLDB03
